@@ -1,3 +1,5 @@
+package client;
+import clientGUI.ClientFrame;
 import java.net.*;
 import java.io.*;
 
@@ -37,7 +39,7 @@ public class Client {
 
     // Method to start a listener thread for receiving messages from the server
     public void startListener() {
-        Thread listenerThread = new Thread(() -> {
+        Thread listenerThread = Thread.ofVirtual().start(() -> {
             try {
                 String serverMessage;
                 while ((serverMessage = in.readLine()) != null) {
@@ -47,19 +49,20 @@ public class Client {
                 System.out.println("Error reading from server: " + e.getMessage());
             }
         });
-        listenerThread.start();
+    }
+    public String getMessage() {
+        try {
+            return in.readLine(); // Returns a message or null if the connection is closed
+        } catch (IOException e) {
+            System.out.println("Error reading from server: " + e.getMessage());
+            return null;
+        }
     }
 
     // Method to send messages to the server
-    public void sendMessages() {
-        try {
-            System.out.println("Type your messages below:");
-            String userInput;
-            while ((userInput = stdIn.readLine()) != null) {
-                out.println(userInput);
-            }
-        } catch (IOException e) {
-            System.out.println("Error reading user input: " + e.getMessage());
+    public void sendMessages(String message) {
+        if (out != null) {
+            out.println(message);
         }
     }
     public void closeResources() {
@@ -78,19 +81,12 @@ public class Client {
         int port = 9999;
 
         // If hostname and port are provided as arguments, use them
-        if (args.length > 0) {
-            hostname = args[0];
-        }
-        if (args.length > 1) {
-            port = Integer.parseInt(args[1]);
-        }
 
         Client client = new Client(hostname, port);
-
-        // Connect to the server and start the client
+        new ClientFrame(client);
         client.connect();
-        client.startListener(); // Start listening for messages from the server
-        client.sendMessages();  // Start sending messages to the server
+        client.startListener();
+
         // end the job
         client.closeResources();
     }
